--- a/Chits_New/PAWebconsole/Reports/ChitsMonthlyDue.rdlc
+++ b/Chits_New/PAWebconsole/Reports/ChitsMonthlyDue.rdlc
@@ -10,7 +10,6 @@
     </DataSource>
   </DataSources>
   <BottomMargin>1in</BottomMargin>
-  <RightMargin>1in</RightMargin>
   <rd:DrawGrid>true</rd:DrawGrid>
   <InteractiveWidth>8.5in</InteractiveWidth>
   <rd:SnapToGrid>true</rd:SnapToGrid>
@@ -488,7 +487,6 @@
     <Height>2in</Height>
   </Body>
   <rd:ReportID>4ef471af-09aa-4149-ace5-78889c936616</rd:ReportID>
-  <LeftMargin>1in</LeftMargin>
   <DataSets>
     <DataSet Name="ChitsInfo">
       <rd:DataSetInfo>
@@ -536,6 +534,7 @@
       </Fields>
     </DataSet>
   </DataSets>
+  <Code />
   <Width>8.5in</Width>
   <InteractiveHeight>11in</InteractiveHeight>
   <Language>en-US</Language>
